--- a/src/index.scss
+++ b/src/index.scss
@@ -7,3 +7,21 @@
 body {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
+
+.trash {
+  color: red;
+  font-size: 1.2rem;
+  margin-right: 1.2rem;
+  cursor: pointer;
+}
+
+.pencilAlt {
+  color: blue;
+  font-size: 1.2rem;
+  margin-right: 1.2rem;
+  cursor: pointer;
+}
+
+p {
+  margin-bottom: 0rem;
+}
